# toke-tokenizer

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  eval.py  eval_report.json  eval_report_32k.json  prepare.py  pyproject.toml  train.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
docs/: eval_retrain_11_6_2.json  eval_syntax_tokens_11_4_6.json  tokenizer-design.md
scripts/: eval_syntax_tokens.py  retrain_bpe.py  tokenizer_alignment.py
tests/: test_eval.py  test_prepare.py  test_train.py
